# CSMC

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: images.ipynb  images_torch.ipynb  synthetic.ipynb  synthetic_amc.ipynb  synthetic_cgm.ipynb  synthetic_curplus.ipynb  synthetic_nonconvex.ipynb  synthetic_tensors.ipynb
experiments/: jester_experiment.py  synthetic.py  synthetic2.py  synthetic_scaling.py
src/csmc/: __init__.py  csmc.py  css.py  settings.py  transform.py
src/csmc/adaptive_mc/: asmc.py  mc2.py
src/csmc/errors/: __init__.py  errors.py
src/csmc/mc/: __init__.py  cgm.py  nn_completion.py  soft_impute.py
src/csmc/mc_sota/: curplus.py  sgd.py  svp.py
tests/: data_generation.py  linalg.py  test_cssmc.py
